# gazetool

./: .gitignore  CMakeLists.txt  README.TXT  README.md  TODO.txt  notes.txt
data/: CMakeLists.txt
inpainttool/: CMakeLists.txt  inpaint.cpp  match.cpp
src/: glimageview.cpp
src/lib/: CMakeLists.txt  eyelidlearner.cpp  eyelidlearner.h  facedetectionworker.cpp  facedetectionworker.h  faceid.cpp  faceid.h  faceparts.cpp  faceparts.h  gazehyps.cpp  gazehyps.h  horizontalheadposelearner.cpp  horizontalheadposelearner.h  imageprovider.cpp  imageprovider.h  mutualgazelearner.cpp  mutualgazelearner.h  regressionworker.cpp  regressionworker.h  relativeeyelidlearner.cpp  relativeeyelidlearner.h  relativegazelearner.cpp  relativegazelearner.h  resultpublisher.cpp  resultpublisher.h  rlssmoother.cpp  rlssmoother.h  rossupport.cpp  rossupport.h  rsbsupport.cpp  rsbsupport.h  shapedetectionworker.cpp  shapedetectionworker.h  subject.h  verticalgazelearner.cpp  verticalgazelearner.h  verticalheadposelearner.cpp  verticalheadposelearner.h  workerthread.cpp  workerthread.h  (+2 more)
src/ui/: CMakeLists.txt  gazergui.cpp  gazergui.h  glimageview.cpp  glimageview.h  headless.cpp  main.cpp  mainloop.cpp  mainloop.h  workerthread.cpp  workerthread.h
src/ui/config/: gazetool.sh.in
