cmake_minimum_required(VERSION 2.8)


PROJECT(gazetool)

set(GAZETOOL_MAJOR_VERSION 0)
set(GAZETOOL_MINOR_VERSION 1)
set(GAZETOOL_PATCH_VERSION 0)
set(GAZETOOL_VERSION
  ${GAZETOOL_MAJOR_VERSION}.${GAZETOOL_MINOR_VERSION}.${GAZETOOL_PATCH_VERSION})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

OPTION(ENABLE_QT_SUPPORT   "Enable qt support" ON)
OPTION(ENABLE_YARP_SUPPORT "Enable yarp support" OFF)
OPTION(ENABLE_RSB_SUPPORT  "Enable rsb support" OFF)
OPTION(ENABLE_ROS_SUPPORT  "Enable ros support" OFF)

set(CMAKE_AUTOMOC TRUE)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(dlib REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system chrono program_options REQUIRED)

SET(GAZETOOL_INCLUDES
    src/lib
    ${OpenCV_INCLUDE_DIRS}
    ${Boost_INCLUDE_DIR}
    ${dlib_INCLUDE_DIRS}
)

SET(GAZETOOL_LIBS
    ${OpenCV_LIBS}
    ${dlib_LIBRARIES}
    ${Boost_LIBRARIES}
)

IF(ENABLE_QT_SUPPORT)
    FIND_PACKAGE(Qt5Core REQUIRED)
    FIND_PACKAGE(Qt5Widgets REQUIRED)
    FIND_PACKAGE(Qt5OpenGL REQUIRED)
    FIND_PACKAGE(Qt5Gui REQUIRED)
    ADD_DEFINITIONS(-DENABLE_QT5)
ENDIF()

IF(ENABLE_YARP_SUPPORT)
    FIND_PACKAGE(YARP REQUIRED)
    ADD_DEFINITIONS(-DENABLE_YARP_SUPPORT)
    SET(GAZETOOL_INCLUDES ${GAZETOOL_INCLUDES} ${YARP_INCLUDE_DIRS})
    SET(GAZETOOL_LIBS ${GAZETOOL_LIBS} ${YARP_LIBRARIES})
ENDIF()

IF(ENABLE_RSB_SUPPORT)
    FIND_PACKAGE(RSB REQUIRED)
    FIND_PACKAGE(RST 0.13.7 REQUIRED COMPONENTS)
    FIND_PACKAGE(rst-converters REQUIRED)
    ADD_DEFINITIONS(-DENABLE_RSB_SUPPORT)
    ADD_DEFINITIONS(${RST_CONVERTERS_CFLAGS})

    SET(GAZETOOL_INCLUDES ${GAZETOOL_INCLUDES}
        ${RSB_INCLUDE_DIRS}
        ${RST_INCLUDE_DIRS}
        ${RST_EXPERIMENTAL_INCLUDE_DIRS}
        ${RST_CONVERTERS_INCLUDE_DIRS}
    )

    SET(GAZETOOL_LIBDIRS
        ${RSB_RUNTIME_LIBRARY_DIRS}
        ${RST_RUNTIME_LIBRARY_DIRS}
    )

    SET(GAZETOOL_LIBS ${GAZETOOL_LIBS}
        ${RST_LIBRARIES}
        ${RSTSANDBOX_LIBRARIES}
        ${RSB_LIBRARIES}
        ${RST_CONVERTERS_LIBRARIES}
    )
ENDIF()

IF(ENABLE_ROS_SUPPORT)
    FIND_PACKAGE(sensor_msgs REQUIRED)
    FIND_PACKAGE(cv_bridge REQUIRED)
    FIND_PACKAGE(roscpp REQUIRED)
    FIND_PACKAGE(std_msgs REQUIRED)
    FIND_PACKAGE(image_transport REQUIRED)

    SET(GAZETOOL_INCLUDES ${GAZETOOL_INCLUDES}
        ${sensor_msgs_INCLUDE_DIRS}
        ${cv_bridge_INCLUDE_DIRS}
        ${roscpp_INCLUDE_DIRS}
        ${std_msgs_INCLUDE_DIRS}
        ${image_transport_INCLUDE_DIRS}
        )

    SET(GAZETOOL_LIBDIRS
        ${sensor_msgs_LIBRARY_DIRS}
        ${cv_bridge_LIBRARY_DIRS}
        ${roscpp_LIBRARY_DIRS}
        ${std_msgs_LIBRARY_DIRS}
        ${image_transport_LIBRARY_DIRS}
        )

    SET(GAZETOOL_LIBS ${GAZETOOL_LIBS}
        ${sensor_msgs_LIBRARIES}
        ${cv_bridge_LIBRARIES}
        ${roscpp_LIBRARIES}
        ${std_msgs_LIBRARIES}
        ${image_transport_LIBRARIES}
        )
ENDIF()

add_subdirectory(src/lib)
add_subdirectory(src/ui)
add_subdirectory(data)
