cmake_minimum_required(VERSION 2.8)

INCLUDE_DIRECTORIES(${GAZETOOL_INCLUDES})

SET(GAZETOOL_SRC main.cpp workerthread.cpp)
SET(GAZETOOL_LIBS gazetool ${GAZETOOL_LIBS})

IF(ENABLE_QT_SUPPORT)
  QT5_WRAP_UI(UI_HEADERS gazergui.ui)
  SET(GAZETOOL_SRC ${GAZETOOL_SRC} gazergui.cpp glimageview.cpp ${UI_HEADERS})
  SET(GAZETOOL_LIBS ${GAZETOOL_LIBS} GL)
ENDIF()

ADD_EXECUTABLE(dlibgazer ${GAZETOOL_SRC})
IF(ENABLE_QT_SUPPORT)
  qt5_use_modules(dlibgazer Core Widgets Gui OpenGL)
  ADD_DEPENDENCIES(dlibgazer ${UI_HEADERS})
ENDIF()
TARGET_LINK_LIBRARIES(dlibgazer ${GAZETOOL_LIBS})

INSTALL(TARGETS dlibgazer RUNTIME DESTINATION bin)

CONFIGURE_FILE("config/gazetool.sh.in" gazetool.sh @ONLY)
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/gazetool.sh DESTINATION bin)
